react-app/react-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
  labels:
    app: react-app
spec:
  selector:
    app: react-app
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
