react-app/react-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: react-app-ingress
  annotations:
     kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: first.bar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: react-app
          servicePort: 80
